src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_12.snap
---
source: src/parser/test.rs
description: "if (x) { x } else { @ }"
expression: result
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Ok(
            Identifier {
                token: Token(Identifier, "x", (0,4)->(0,5)),
                name: "x",
            },
        ),
        consequence: Ok(
            Block {
                token: Token(LBrace, "{", (0,7)->(0,8)),
                statements: [
                    Identifier {
                        token: Token(Identifier, "x", (0,9)->(0,10)),
                        name: "x",
                    },
                ],
                start: (0,7),
                end: (0,11),
            },
        ),
        alternative: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,20)->(0,21)),
        ),
    },
]

===================================

if (x) { x } else { @ }
                    ^ [Error] SyntaxError: Unexpected '@'.
